--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Студент группы ИПуспк-322</p>
 </body>
 </html>
-<button>Подписаться на новости</button>
+<button style="background-color: blue; color: white;">Подписаться на новости</button>
+
 
