Добавлена форма входа через соцсети

--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
 </body>
 </html>
 <button>Подписаться на новости</button>
-
+<form>
+    <label for="login">Логин:</label>
+    <input type="text" id="login" name="login">
+    <button type="submit">Войти через соцсети</button>
+</form>
